material.css
/* ... */
/* cyrillic-ext */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/sTdaA6j0Psb920Vjv-mrzH-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
}
/* cyrillic */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/uYECMKoHcO9x1wdmbyHIm3-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
}
/* greek-ext */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/tnj4SB6DNbdaQnsM8CFqBX-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
  unicode-range: U+1F00-1FFF;
}
/* greek */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/_VYFx-s824kXq_Ul2BHqYH-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
  unicode-range: U+0370-03FF;
}
/* vietnamese */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/NJ4vxlgWwWbEsv18dAhqnn-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
  unicode-range: U+0102-0103, U+1EA0-1EF1, U+20AB;
}
/* latin-ext */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/Ks_cVxiCiwUWVsFWFA3Bjn-_kf6ByYO6CLYdB4HQE-Y.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v15/oMMgfZMQthOryQo9n22dcuvvDin1pK8aKteLpeZ5c0A.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin-ext */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v11/8qcEw_nrk_5HEcCpYdJu8BTbgVql8nDJpwnrE27mub0.woff2) format('woff2');
  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
}

/* latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: local('Lato Regular'), local('Lato-Regular'), url(https://fonts.gstatic.com/s/lato/v11/MDadn8DQ_3oT6kvnUq_2r_esZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* Fonts End */

* {
	user-select: none;
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	-webkit-touch-callout: none;
    outline: none;
    text-rendering: optimizeLegibility;
    font-family: 'Lato', 'Roboto', sans-serif;
    font-weight: 400;
}

.title, .subtitle {
    font-family: 'Montserrat', sans-serif;
}

body,
html {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: rgba(33, 150, 243, 1) !important;
}

/* Introduction Begin */

.introduction > .title {
    font-size: 32px;
    line-height: 24px;
    color: rgba(33, 150, 243, 1);
}

.introduction > .detail {
    margin: 18px 0 0 0;
    padding: 0;
    font-size: 20px;
    line-height: 28px;
    width: 75%;
    max-width: 993px;
}

/* Introduction End */

/* Chapter Begin */

.chapter {
    margin: 32px 0 0 0;
    padding: 0;
    padding-left: 24px;
    border-left: 4px solid;
    border-left-color: rgba(33, 150, 243, 1);
}

.chapter > .title {
    padding: 0;
    font-size: 14px;
    color: rgba(96, 125, 139, 1);
}

.chapter > ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.chapter > ul > li {
    padding-top: 16px;
    font-size: 18px;
}

/* Chapter End */

/* Article Begin */

.article {
    padding: 48px 0 0 0;
}

.article > section,
.article > .section {
    margin: 48px 0 0 0;
}

.article > section > .title,
.article > .section > .title {
    margin: 0;
    font-size: 20px;
    line-height: 28px;
    color: rgba(33, 150, 243, 1);
}

.article > section > .subtitle,
.article > .section > .subtitle {
    margin: 32px 0 0 0;
    font-size: 14px;
    font-weight: 700;
    color: rgba(38, 50, 56, 1);
}

.article > section > .detail,
.article > .section > .detail {
    margin: 16px 0 0 0;
    font-size: 14px;
}

.article > section > .card,
.article > .section > .card {
    margin: 16px 0 0 0;
}

/* Article End */

/* Container Begin */

.container {
    margin: 0 auto;
    position: relative;
}

@media screen and (max-width: 600px) {
    .container {
        width: 85% !important;
    }
}

@media screen and (min-width: 601px) and (max-width: 992px) {
    .container {
        width: 85% !important;
    }
}

@media screen and (min-width: 993px) {
    .container {
        width: 70% !important;
        max-width: 1160px;
    }
}

/* Container End */

/* Card Begin */

.card {
    position: relative;
    overflow: hidden;
    background-color: rgba(255, 255, 255, 1);
    border: 1px solid rgba(236, 239, 241, 1);
    -moz-border-radius: 4px;
	-webkit-border-radius: 4px;
    border-radius: 4px;
}

.card p.title {
    margin: 32px;
    color: rgba(38, 50, 56, 1);
}

.card p.detail {
    margin: 32px;
    font-family: 'ClearSans', sans-serif !important;
    color: rgba(38, 50, 56, 1);
}

@media screen and (max-width: 600px) {
    .card p.title {
        font-size: 8px;
    }

    .card p.detail {
        font-size: 4px;
    }
}
/* ... */

